--- a/src/components/WeatherLocation/styles.css
+++ b/src/components/WeatherLocation/styles.css
@@ -1,4 +1,16 @@
-.locationCont {
+.weatherLocationCont {
+    margin-left: 10px;
+    margin-right: 10px;
+    width: calc(100% - 20px);
+    min-width: 430px;
+    padding: 25px;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    box-shadow: 10px 10px 42px -12px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
+}
+
+.LocationCont {
     width: 100%;
     height: 35px;
     text-align: left;
@@ -6,13 +18,6 @@
     line-height: 35px;
 }
 
-.locationCont h1 {
-    margin: 0
-}
-
-.weatherLocationCont {
-    width: 400px;
-    padding: 25px;
-    font-family: 'Roboto', sans-serif;
-    box-shadow: 10px 10px 40px -12px rgba(0, 0, 0, 0.75);
+.LocationCont h1 {
+    margin: 0;
 }
